--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<nav class="navbar navbar-expand-md navbar-dark bg-success">
+	<nav class="navbar navbar-expand-sm navbar-dark bg-success">
 		<a href="#" class="navbar-brand">compony</a>
 
 		<button class="btn navbar-toggler" data-toggle="collapse" data-target="#collapsible">
