--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<nav class="navbar navbar-expand-sm navbar-dark bg-success">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
 		<a href="#" class="navbar-brand">compony</a>
 
 		<button class="btn navbar-toggler" data-toggle="collapse" data-target="#collapsible">
@@ -24,14 +24,14 @@
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-6 bg-light order-md-1 order-2 p-5 d-flex align-items-center">
+			<div class="col-md-6 bg-light order-lg-1 order-2 p-4 d-flex align-items-center">
 				<div class="box">
 					<h2 class="text-wrap">I am Web Designer / Front End Developer.</h2>
 					<p>I design and devlope awesome website.</p>
 					<button class="btn btn-success btn-outline-primary">Get Started</button>
 				</div>
 			</div>
-			<div class="col-md-6 bg-secondary order-md-2 order-1 p-0">
+			<div class="col-md-6 bg-secondary order-lg-2 order-1 p-0">
 				<img src="media/gyan-samudra-002.jpg" class="img img-fluid">
 			</div>
 		</div>
